# binary_oracle

./: Anchor.toml  package-lock.json  package.json
programs/oracle-contracts/: Cargo.toml
programs/oracle-contracts/src/: lib.rs
tests/: binary_oracle_tests.rs  oracle-contracts.ts
